# PythonProject1

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
 tests/: test_masks.py
src/: __init__.py  masks.py  processing.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
