[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1)",
    "mypy (>=1.17.1,<2.0.0)",
    "masks (>=0.1.3,<0.2.0)"
]

[tool.poetry]

[tool.poetry.packages]
include = ["pythonproject1"]

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
masks = "^0.1.3"
flask = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"